@@ -5,10 +5,10 @@
 #  below
 #
 query = "\
-	SELECT SUM(acctsessiontime - GREATEST((%b - UNIX_TIMESTAMP(acctstarttime)), 0)) \
+	SELECT SUM(acctsessiontime - GREATEST((%%b - UNIX_TIMESTAMP(acctstarttime)), 0)) \
 	FROM radacct \
 	WHERE username='%{${key}}' \
-	AND UNIX_TIMESTAMP(acctstarttime) + acctsessiontime > '%b'"
+	AND UNIX_TIMESTAMP(acctstarttime) + acctsessiontime > '%%b'"
 
 #
 #  This query ignores calls that started in a previous
@@ -19,16 +19,16 @@ query = "\
 #	SELECT SUM(acctsessiontime) \
 #	FROM radacct\
 #	WHERE username='%{${key}}' \
-#	AND acctstarttime > FROM_UNIXTIME('%b')"
+#	AND acctstarttime > FROM_UNIXTIME('%%b')"
 
 #
 #  This query is the same as above, but demonstrates an
-#  additional counter parameter '%e' which is the
+#  additional counter parameter '%%e' which is the
 #  timestamp for the end of the period
 #
 #query = "\
 #	SELECT SUM(acctsessiontime) \
 #	FROM radacct \
 #	WHERE username='%{${key}}' \
-#	AND acctstarttime BETWEEN FROM_UNIXTIME('%b') \
-#	AND FROM_UNIXTIME('%e')"
+#	AND acctstarttime BETWEEN FROM_UNIXTIME('%%b') \
+#	AND FROM_UNIXTIME('%%e')"
