@@ -3,10 +3,10 @@
 #  involves more work for the SQL server than those
 #  below
 query = "\
-	SELECT SUM(AcctSessionTime - GREATER((%b - AcctStartTime::ABSTIME::INT4), 0)) \
+	SELECT SUM(AcctSessionTime - GREATER((%%b - AcctStartTime::ABSTIME::INT4), 0)) \
 	FROM radacct \
 	WHERE UserName='%{${key}}' \
-	AND AcctStartTime::ABSTIME::INT4 + AcctSessionTime > '%b'"
+	AND AcctStartTime::ABSTIME::INT4 + AcctSessionTime > '%%b'"
 
 #
 #  This query ignores calls that started in a previous
@@ -17,15 +17,15 @@ query = "\
 #	SELECT SUM(AcctSessionTime) \
 #	FROM radacct \
 #	WHERE UserName='%{${key}}' \
-#	AND AcctStartTime::ABSTIME::INT4 > '%b'"
+#	AND AcctStartTime::ABSTIME::INT4 > '%%b'"
 
 #
 #  This query is the same as above, but demonstrates an
-#  additional counter parameter '%e' which is the
+#  additional counter parameter '%%e' which is the
 #  timestamp for the end of the period
 #
 #query = "\
 #	SELECT SUM(AcctSessionTime) \
 #	FROM radacct \
 #	WHERE UserName='%{${key}}' \
-#	AND AcctStartTime::ABSTIME::INT4 BETWEEN '%b' AND '%e'"
+#	AND AcctStartTime::ABSTIME::INT4 BETWEEN '%%b' AND '%%e'"
