@@ -5,10 +5,10 @@
 #  below
 #
 query = "\
-	SELECT SUM(acctsessiontime - GREATEST((%b - strftime('%%s', acctstarttime)), 0)) \
+	SELECT SUM(acctsessiontime - GREATEST((%%b - strftime('%%s', acctstarttime)), 0)) \
 	FROM radacct \
 	WHERE username = '%{${key}}' \
-	AND (strftime('%%s', acctstarttime) + acctsessiontime) > %b"
+	AND (strftime('%%s', acctstarttime) + acctsessiontime) > %%b"
 
 #
 #  This query ignores calls that started in a previous
@@ -19,15 +19,15 @@ query = "\
 #	SELECT SUM(acctsessiontime) \
 #	FROM radacct \
 #	WHERE \username = '%{${key}}' \
-#	AND acctstarttime > %b"
+#	AND acctstarttime > %%b"
 
 #
 #  This query is the same as above, but demonstrates an
-#  additional counter parameter '%e' which is the
+#  additional counter parameter '%%e' which is the
 #  timestamp for the end of the period
 #
 #query = "\
 #	SELECT SUM(acctsessiontime) FROM radacct \
 #	WHERE username = '%{${key}}' \
-#	AND acctstarttime BETWEEN %b \
-#	AND %e"
+#	AND acctstarttime BETWEEN %%b \
+#	AND %%e"
